# category-cleaner-rag

./: .gitmodules  README.md  main.py  pyproject.toml
app/: config.py  main.py  rag_pipeline.py  rag_pipeline_v2.py  schemas.py  taxonomy_loader.py
data/: faiss_index.meta.json  taxonomy_df.pkl
data_pipeline_v1/: taxonomy_df.pkl
tests/test_data/: hamed_test_data_with_counts.json
