[project]
name = "category-cleaner-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.118.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
]
